# iot_base

./: .gitignore  CMakeLists.txt  sdkconfig
components/mprotocols/: CMakeLists.txt  mprotocols.c
components/mprotocols/include/: hprotocols.h  mprotocols.h
main/: CMakeLists.txt  Kconfig.projbuild  tcp_client.c
main/inc/: fx_plc_protocol.h  iot_common.h  master.h  ringbuffer.h  sensor.h  tcp_client.h  tcp_master.h  tcp_server.h  time.h  uart_task.h
main/src/: app_main.c  fx_plc_protocol.c  iot_common.c  master.c  ringbuffer.c  sensor.c  tcp_client.c  tcp_server.c  time.c  uart_task.c
main/src/app/: app_main.c  tcp_client.c  tcp_server.c
main/src/common/: ringbuffer.c
main/src/driver/: time.c
main/src/protocol/fx/: fx_plc_protocol.c
main/src/protocol/modbus/: master.c  tcp_master.c
