idf_component_register(SRCS "./src/tcp_client.c"
                       SRCS "./src/tcp_server.c"
                       SRCS "./src/uart_task.c"
                       SRCS "./src/app_main.c"
                       SRCS "./src/ringbuffer.c"
                       SRCS "./src/time.c"
                       SRCS "./src/sensor.c"
                    INCLUDE_DIRS "./inc")
