idf_component_register(SRCS "./src/app/tcp_client.c"
                       SRCS "./src/app/tcp_server.c"
                       SRCS "./src/app/uart_task.c"
                       SRCS "./src/app/app_main.c"
                       SRCS "./src/common/ringbuffer.c"
                       SRCS "./src/driver/time.c"
                       SRCS "./src/driver/sensor.c"
                       SRCS "./src/protocol/fx/fx_plc_protocol.c"
                       SRCS "./src/common/iot_common.c"
                       SRCS "./src/protocol/modbus/master.c"
                       SRCS "./src/protocol/modbus/tcp_master.c"
                       SRCS "./src/protocol/modbus/modbus_params.c"
                    INCLUDE_DIRS "./inc")
